Added all the fonts I will be using

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -45,7 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:fontFamily="@font/playfair_display_bold"
+        android:fontFamily="@font/handy_quomte"
         android:text="@string/about_info"
         android:textColor="@color/black"
         android:textSize="16sp"
@@ -89,8 +89,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:fontFamily="@font/playfair_display_bold"
         android:text="@string/about_us"
+        android:fontFamily="@font/mandhor"
         android:textAllCaps="true"
         android:textColor="@color/black"
         android:textSize="24sp"
@@ -102,8 +102,8 @@
         android:id="@+id/TV_school_info"
         android:layout_width="215dp"
         android:layout_height="80dp"
-        android:textSize="14sp"
-        android:fontFamily="@font/playfair_display_regular"
+        android:textSize="16sp"
+        android:fontFamily="@font/times_new_roman"
         android:text="@string/school_info"
         app:layout_constraintBottom_toBottomOf="@+id/mrgs_logo"
         app:layout_constraintEnd_toEndOf="parent"
@@ -114,9 +114,9 @@
         android:id="@+id/TV_kamar_info"
         android:layout_width="215dp"
         android:layout_height="80dp"
-        android:textSize="14sp"
+        android:textSize="16sp"
         android:text="@string/kamar_info"
-        android:fontFamily="@font/playfair_display_regular"
+        android:fontFamily="@font/times_new_roman"
         app:layout_constraintBottom_toBottomOf="@+id/kamar_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/kamar_logo"
@@ -127,8 +127,8 @@
         android:layout_width="215dp"
         android:layout_height="80dp"
         android:text="@string/nzqa_info"
-        android:textSize="14sp"
-        android:fontFamily="@font/playfair_display_regular"
+        android:textSize="16sp"
+        android:fontFamily="@font/times_new_roman"
         app:layout_constraintBottom_toBottomOf="@+id/nzqa_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/nzqa_logo"
