--- a/app/src/main/res/layout/activity_event_edit.xml
+++ b/app/src/main/res/layout/activity_event_edit.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="20dp"
         android:text="@string/name_of_the_event"
         android:textSize="20sp"
-        android:fontFamily="@font/playfair_display_bold"
+        android:fontFamily="@font/games"
         android:textAlignment="center"
         android:textColor="@color/black" />
 
@@ -38,7 +38,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:text="@string/date"
-        android:fontFamily="@font/playfair_display_regular"
+        android:fontFamily="@font/notoserif_bold"
         android:textSize="20sp"
         android:textAlignment="center"
         android:textColor="@color/black" />
@@ -51,7 +51,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:text="@string/time"
-        android:fontFamily="@font/playfair_display_bold"
+        android:fontFamily="@font/notoserif_bold"
         android:textSize="20sp"
         android:textAlignment="center"
         android:textColor="@color/white" />
@@ -67,7 +67,7 @@
         android:onClick="saveEventAction"
         android:layout_gravity="center"
         android:textSize="20sp"
-        android:fontFamily="@font/playfair_display_bold"
+        android:fontFamily="@font/notoserif_bold"
         tools:ignore="OnClick" />
 
 </LinearLayout>
