--- a/app/src/main/res/layout/activity_week_view.xml
+++ b/app/src/main/res/layout/activity_week_view.xml
@@ -21,6 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/backward"
+            android:fontFamily="@font/mandhor"
             android:textColor="@color/white"
             android:background="@color/black"
             android:textStyle="bold"
@@ -33,7 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:background="@color/black"
-            android:fontFamily="@font/playfair_display_bold"
+            android:fontFamily="@font/mandhor"
             android:gravity="center"
             android:padding="10dp"
             android:text="@string/date"
@@ -45,6 +46,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/forward"
+            android:fontFamily="@font/mandhor"
             android:textColor="@color/white"
             android:background="@color/black"
             android:textStyle="bold"
@@ -144,7 +146,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:background="@color/black"
-        android:fontFamily="@font/playfair_display_bold"
+        android:fontFamily="@font/notoserif_bold"
         android:onClick="newEventAction"
         android:text="@string/new_event"
         android:textColor="@color/white"
