--- a/app/src/main/res/layout/input_file.xml
+++ b/app/src/main/res/layout/input_file.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:text="@string/new_task"
-        android:fontFamily="@font/playfair_display_bold"
+        android:fontFamily="@font/magnilda"
         android:gravity="center"
         android:background="@color/black"
         android:padding="10dp"
@@ -124,7 +124,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/cancel"
-                android:fontFamily="@font/playfair_display_bold"
+                android:fontFamily="@font/notoserif_bold"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:background="@color/black"
@@ -144,7 +144,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/save"
-                android:fontFamily="@font/playfair_display_bold"
+                android:fontFamily="@font/notoserif_bold"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:background="@color/black"
