--- a/app/src/main/res/layout/activity_planner.xml
+++ b/app/src/main/res/layout/activity_planner.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:fontFamily="@font/playfair_display_bold"
+        android:fontFamily="@font/notoserif_bold"
         android:onClick="weeklyAction"
         android:text="@string/weekly"
         android:textColor="@color/white"
@@ -32,6 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/backward"
+            android:fontFamily="@font/mandhor"
             android:textColor="@color/white"
             android:background="@color/black"
             android:textStyle="bold"
@@ -44,7 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:background="@color/black"
-            android:fontFamily="@font/playfair_display_bold"
+            android:fontFamily="@font/mandhor"
             android:gravity="center"
             android:padding="10dp"
             android:text="@string/date"
@@ -56,6 +57,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/forward"
+            android:fontFamily="@font/mandhor"
             android:textColor="@color/white"
             android:background="@color/black"
             android:textStyle="bold"
