--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -11,7 +11,7 @@
         android:textColor="@color/black"
         android:text="@string/about_us_how_to"
         android:textAllCaps="true"
-        android:fontFamily="@font/playfair_display_bold"
+        android:fontFamily="@font/mandhor"
         android:textAlignment="center"
         android:textSize="18sp"
         android:padding="10dp"
@@ -25,6 +25,7 @@
         android:layout_below="@+id/TV_about_howto"
         android:textColor="@color/black"
         android:text="@string/about_help_1"
+        android:fontFamily="@font/playfair_display_regular"
         android:textAlignment="center"
         android:textSize="16sp"
         android:padding="10dp"
@@ -38,6 +39,7 @@
         android:layout_below="@+id/TV_how_about"
         android:textColor="@color/black"
         android:text="@string/about_help_2"
+        android:fontFamily="@font/playfair_display_regular"
         android:textAlignment="center"
         android:textSize="16sp"
         android:padding="10dp"
@@ -51,6 +53,7 @@
         android:layout_below="@+id/TV_how_about_2"
         android:textColor="@color/black"
         android:text="@string/about_help_3"
+        android:fontFamily="@font/playfair_display_regular"
         android:textAlignment="center"
         android:textSize="16sp"
         android:padding="10dp"
@@ -65,6 +68,7 @@
         android:layout_below="@+id/TV_how_about_3"
         android:textColor="@color/black"
         android:text="@string/about_help_4"
+        android:fontFamily="@font/playfair_display_regular"
         android:textAlignment="center"
         android:textSize="16sp"
         android:padding="10dp"
@@ -79,6 +83,7 @@
         android:layout_below="@+id/TV_how_about_4"
         android:textColor="@color/black"
         android:text="@string/about_help_5"
+        android:fontFamily="@font/playfair_display_regular"
         android:textAlignment="center"
         android:textSize="16sp"
         android:padding="10dp"
@@ -93,6 +98,7 @@
         android:layout_below="@+id/TV_how_about_5"
         android:textColor="@color/black"
         android:text="@string/about_help_6"
+        android:fontFamily="@font/playfair_display_regular"
         android:textAlignment="center"
         android:textSize="16sp"
         android:padding="10dp"
@@ -108,6 +114,7 @@
         android:layout_centerInParent="true"
         android:layout_marginTop="15dp"
         android:text="@string/about_us"
+        android:fontFamily="@font/notoserif_bold"
         android:textAllCaps="true"
         android:textColor="@color/white"
         android:textSize="16sp"
