--- a/app/src/main/res/layout/fragment_planner.xml
+++ b/app/src/main/res/layout/fragment_planner.xml
@@ -13,7 +13,7 @@
         android:textColor="@color/black"
         android:text="@string/planner_how_to"
         android:textAllCaps="true"
-        android:fontFamily="@font/playfair_display_bold"
+        android:fontFamily="@font/mandhor"
         android:textAlignment="center"
         android:textSize="18sp"
         android:padding="10dp"
@@ -27,6 +27,7 @@
         android:layout_below="@+id/TV_planner_howto"
         android:textColor="@color/black"
         android:text="@string/planner_help_1"
+        android:fontFamily="@font/playfair_display_regular"
         android:textAlignment="center"
         android:textSize="16sp"
         android:padding="10dp"
@@ -41,6 +42,7 @@
         android:layout_below="@+id/TV_how_planner"
         android:layout_marginTop="10dp"
         android:text="@string/planner_help_2"
+        android:fontFamily="@font/playfair_display_regular"
         android:padding="10dp"
         android:textAlignment="center"
         android:textSize="16sp"
@@ -55,6 +57,7 @@
         android:layout_below="@+id/TV_how_planner_2"
         android:layout_marginTop="10dp"
         android:text="@string/planner_help_3"
+        android:fontFamily="@font/playfair_display_regular"
         android:padding="10dp"
         android:textAlignment="center"
         android:textSize="16sp"
@@ -69,6 +72,7 @@
         android:layout_below="@+id/TV_how_planner_3"
         android:layout_marginTop="10dp"
         android:text="@string/planner_help_4"
+        android:fontFamily="@font/playfair_display_regular"
         android:padding="10dp"
         android:textAlignment="center"
         android:textSize="16sp"
@@ -83,6 +87,7 @@
         android:layout_below="@+id/TV_how_planner_4"
         android:layout_marginTop="10dp"
         android:text="@string/planner_help_5"
+        android:fontFamily="@font/playfair_display_regular"
         android:padding="10dp"
         android:textAlignment="center"
         android:textSize="16sp"
@@ -97,6 +102,7 @@
         android:layout_centerInParent="true"
         android:layout_marginTop="15dp"
         android:text="@string/planner"
+        android:fontFamily="@font/notoserif_bold"
         android:textAllCaps="true"
         android:textColor="@color/white"
         android:textSize="16sp"
