--- a/app/src/main/res/layout/fragment_todolist.xml
+++ b/app/src/main/res/layout/fragment_todolist.xml
@@ -11,7 +11,7 @@
         android:textColor="@color/black"
         android:text="@string/to_do_how_to"
         android:textAllCaps="true"
-        android:fontFamily="@font/playfair_display_bold"
+        android:fontFamily="@font/mandhor"
         android:textAlignment="center"
         android:textSize="18sp"
         android:padding="10dp"
@@ -25,6 +25,7 @@
         android:layout_below="@+id/TV_todo_howto"
         android:textColor="@color/black"
         android:text="@string/to_do_help_1"
+        android:fontFamily="@font/playfair_display_regular"
         android:textAlignment="center"
         android:textSize="16sp"
         android:padding="10dp"
@@ -39,6 +40,7 @@
         android:layout_below="@+id/TV_how_todo"
         android:layout_marginTop="10dp"
         android:text="@string/to_do_help_2"
+        android:fontFamily="@font/playfair_display_regular"
         android:padding="10dp"
         android:textAlignment="center"
         android:textSize="16sp"
@@ -53,6 +55,7 @@
         android:layout_below="@+id/TV_how_todo_2"
         android:layout_marginTop="10dp"
         android:text="@string/to_do_help_3"
+        android:fontFamily="@font/playfair_display_regular"
         android:padding="10dp"
         android:textAlignment="center"
         android:textSize="16sp"
@@ -67,6 +70,7 @@
         android:layout_below="@+id/TV_how_todo_3"
         android:layout_marginTop="10dp"
         android:text="@string/to_do_help_4"
+        android:fontFamily="@font/playfair_display_regular"
         android:padding="10dp"
         android:textAlignment="center"
         android:textSize="16sp"
@@ -81,6 +85,7 @@
         android:layout_below="@+id/TV_how_todo_4"
         android:layout_marginTop="10dp"
         android:text="@string/to_do_help_5"
+        android:fontFamily="@font/playfair_display_regular"
         android:padding="10dp"
         android:textAlignment="center"
         android:textSize="16sp"
@@ -95,6 +100,7 @@
         android:layout_centerInParent="true"
         android:layout_marginTop="15dp"
         android:text="@string/todolist"
+        android:fontFamily="@font/notoserif_bold"
         android:textAllCaps="true"
         android:textColor="@color/white"
         android:textSize="16sp"
