--- a/app/src/main/res/layout/update_data.xml
+++ b/app/src/main/res/layout/update_data.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:text="@string/update_task"
-        android:fontFamily="@font/playfair_display_bold"
+        android:fontFamily="@font/magnilda"
         android:gravity="center"
         android:background="@color/black"
         android:textColor="@color/white"
@@ -123,7 +123,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/delete"
-                android:fontFamily="@font/playfair_display_bold"
+                android:fontFamily="@font/notoserif_bold"
                 android:textAllCaps="false"
                 android:background="@color/black"
                 android:textColor="@color/white"
@@ -143,7 +143,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/update"
-                android:fontFamily="@font/playfair_display_bold"
+                android:fontFamily="@font/notoserif_bold"
                 android:textAllCaps="false"
                 android:background="@color/black"
                 android:textColor="@color/white"
