Vector names changed and used more accurate vectors! Added dialog for exit confirmation on login page too

--- a/app/src/main/res/layout/activity_event_edit.xml
+++ b/app/src/main/res/layout/activity_event_edit.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".EventEditActivity"
-    android:background="@drawable/gradient">
+    android:background="@drawable/gradient_bg">
 
     <TextView
         android:layout_width="wrap_content"
