--- a/app/src/main/res/layout/activity_week_view.xml
+++ b/app/src/main/res/layout/activity_week_view.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".WeekViewActivity"
-    android:background="@drawable/gradient"
+    android:background="@drawable/gradient_bg"
     android:orientation="vertical">
 
     <LinearLayout
