--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,14 +4,14 @@
 <!--    The Items my bottom navigation bar contains -->
     <item
         android:id="@+id/planner"
-        android:icon="@drawable/ic_baseline_calendar_today_24"
+        android:icon="@drawable/planner_vector"
         android:title="@string/planner" />
     <item
         android:id="@+id/todolist"
-        android:icon="@drawable/ic_baseline_format_list_bulleted_24"
+        android:icon="@drawable/todolist_vector"
         android:title="@string/todolist" />
     <item
         android:id="@+id/TV_about_howto"
-        android:icon="@drawable/ic_baseline_notes_24"
+        android:icon="@drawable/about_us_vector"
         android:title="@string/about_us" />
 </menu>
