--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,14 +8,29 @@
     android:background="@drawable/gradient_bg">
 
     <ImageView
-        android:contentDescription="@string/cont_disc"
+        android:id="@+id/mrgs_logo"
         android:layout_width="200dp"
         android:layout_height="200dp"
+        android:layout_gravity="center"
+        android:contentDescription="@string/cont_disc"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo2"/>
+        app:srcCompat="@drawable/logo2" />
 
+    <TextView
+        android:id="@+id/copyright"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/times_new_roman"
+        android:gravity="center"
+        android:padding="15dp"
+        android:text="@string/copyright"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
