--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="hot_pink">#ff1493</color>
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
+    <color name="darkGray">#222</color>
 </resources>
