--- a/app/src/main/res/layout/activity_planner.xml
+++ b/app/src/main/res/layout/activity_planner.xml
@@ -7,7 +7,20 @@
     tools:context=".PlannerActivity"
     android:background="@drawable/gradient_bg"
     android:orientation="vertical">
-    
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:text="@string/event"
+        android:fontFamily="@font/mandhor"
+        android:textColor="@color/white"
+        android:background="@drawable/radius"
+        android:onClick="event_btn"
+        android:textSize="20sp"
+        tools:ignore="OnClick" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -23,7 +36,7 @@
             android:text="@string/backward"
             android:fontFamily="@font/mandhor"
             android:textColor="@color/white"
-            android:background="@color/black"
+            android:background="@drawable/radius"
             android:textStyle="bold"
             android:onClick="previousMonthAction"
             android:textSize="20sp" />
@@ -33,7 +46,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:background="@color/black"
+            android:background="@drawable/radius"
             android:fontFamily="@font/mandhor"
             android:gravity="center"
             android:padding="10dp"
@@ -48,7 +61,7 @@
             android:text="@string/forward"
             android:fontFamily="@font/mandhor"
             android:textColor="@color/white"
-            android:background="@color/black"
+            android:background="@drawable/radius"
             android:textStyle="bold"
             android:onClick="nextMonthAction"
             android:textSize="20sp" />
@@ -139,3 +152,5 @@
         android:layout_height="match_parent" />
 
 </LinearLayout>
+
+
