--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
     <color name="darkGray">#222</color>
+    <color name="red">#ff0000</color>
 </resources>
